# prism

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: entities.yaml  sources.yaml
docs/: RUNTIME.md  SPEC.md
docs/briefs/: 2026-03-26-spec-review.md  entity-system-design.md  info-sources-strategy.md  model-arena-spec-refinement.md
docs/constitution/: mission.md  roadmap.md  tech-stack.md
docs/context/: model-arena-spec-current.md
docs/notes/: 2026-04-21-sdd-course-zh.md  2026-04-23-omlx-dashboard-todo.md
docs/proposals/: omlx-batch-requirements.md
docs/proposals/claude/: 2026-03-26-spec-review.md  entity-system-design.md  (+1 more)
docs/specs/: 2026-03-24-prism-design.md  2026-03-29-prism-v2-entity-system.md
prism/: __main__.py  cli.py  config.py  db.py  models.py  persona.py  source_manager.py
prism-lens/: README.md  SKILL.md  lens.py
prism/api/: app.py  mcp.py  routes.py
prism/ctr/: __init__.py  collect.py  features.py  impressions.py  model.py  samples.py  stats.py  train.py
prism/discovery/: __init__.py  x_follows.py  xyz_rank.py
prism/output/: briefing.py  notion.py
prism/personalize/: __init__.py  identity.py  protocol.py
prism/pipeline/: analyze.py  articlize.py  cluster.py  entities.py  entity_extract.py  entity_lifecycle.py  entity_link.py  entity_normalize.py  export.py  external_feed.py  llm.py  llm_tasks.py  migrate_youtube.py  sync.py  translate.py  trends.py  xyz_queue.py
prism/quality/: __init__.py  rules.py  scan.py  snapshot.py
prism/scheduling/: com.prism.daily.plist  com.prism.external-feed.plist  com.prism.hourly.plist  com.prism.web.plist  com.prism.xyz-queue.plist  daily.sh  fast.sh  hourly.sh  xyz_queue.sh
prism/sources/: __init__.py  arxiv.py  base.py  claude_sessions.py  follow_builders.py  git_practice.py  github.py  github_home.py  github_releases.py  hackernews.py  hn_search.py  link_expander.py  model_economics.py  producthunt.py  reddit.py  subtitles.py  x.py  x_home.py  xiaoyuzhou.py  yaml_editor.py  youtube.py  youtube_home.py
prism/web/: auth.py  board.py  feed.py  feed_pool.py  pairwise.py  ranking.py  routes.py  slides.py
scripts/: batch_translate.py  health_check.py
tests/: conftest.py  test_analyze.py  test_api.py  test_briefing.py  test_cli_new.py  test_cluster.py  test_db.py  test_db_schema.py  test_entities.py  test_entity_briefing.py  test_entity_extract.py  test_entity_integration.py  test_entity_lifecycle.py  test_entity_link.py  test_entity_migration.py  test_entity_normalize.py  test_entity_schema.py  test_external_feed_consumer.py  test_feed_action.py  test_feed_follow_mute.py  test_feed_following.py  test_feed_interactions_schema.py  test_feed_rank.py  test_feed_route.py  test_feed_saved.py  test_llm_tagging.py  test_notion.py  test_pair_strategy.py  test_persona_crud.py  test_persona_extract.py  test_persona_route.py  test_quality.py  test_source_manager.py  test_sync.py  test_taste_sources.py  test_trends.py  test_x_follows.py  test_yaml_editor.py
tests/ctr/: test_collect.py  test_features.py  test_samples.py  test_stats.py
tests/fixtures/: arxiv_rss_response.xml  follow_builders_feed.json  github_trending_response.html  x_bird_user_tweets.json  x_syndication_response.json
tests/pipeline/: test_articlize.py  test_export.py
tests/sources/: test_arxiv.py  test_claude_sessions.py  test_follow_builders.py  test_git_practice.py  test_github.py  test_github_releases.py  test_hackernews.py  test_model_economics.py  test_x.py  test_youtube.py
tests/web/: test_creator_routes.py  test_feedback.py  test_pairwise.py  test_ranking.py  test_routes.py
(+86 files in other folders)
