[project]
name = "prism"
version = "0.1.0"
description = "AI Signal Intelligence System"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "httpx>=0.25",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "uvicorn>=0.30",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
thread = ["playwright>=1.40"]

[project.scripts]
prism = "prism.cli:cli"
